src/test/deca/syntax/invalid/sansObjet/affectationSansSecondMembre.deca
// Description:
//    test de programme incorrect syntaxiquement (absence du second membre d'une affectation)
//
// Resultats:
//    ligne 12 : Erreur, mismatched input ';' expecting
//   {'(', '-', '!', 'readInt', 'readFloat', 'new', 'true',
//   'false', 'this', 'null', STRING, INT, FLOAT, IDENT}
//
// Historique:
//    cree le 01/01/2024

{int a=;}